--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://tgihost.pages.dev/image?id=BQACAgUAAx0EfBziBwACAXhmrd_H2wwQ1hVfPwUpF0DobV0BvQAC0Q8AAq1wcFVlgvYvsM0pzTUE" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://tgihost.pages.dev/image?id=BQACAgUAAx0EfBziBwACAXhmrd_H2wwQ1hVfPwUpF0DobV0BvQAC0Q8AAq1wcFVlgvYvsM0pzTUE" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script
+      src="https://widget.cloudinary.com/v2.0/global/all.js"
+      type="text/javascript"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Tiro+Bangla:ital@0;1&display=swap"
       rel="stylesheet" />
